--- a/Refactored cdual timeframe bnf setup .ipynb
+++ b/Refactored cdual timeframe bnf setup .ipynb
@@ -14714,7 +14714,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pythonProject",
    "language": "python",
    "name": "python3"
   },
